@@ -110,6 +110,7 @@ commands =
 # We have some long sphinx cross-refs that can't be broken. Black will still wrap at 88.
 max-line-length = 110
 
+rst-directives = literalinclude
 rst-roles = py:attr, py:class, py:const, py:exc, py:func, py:meth, py:mod
 docstring-style = sphinx
 enable = DAR104
